--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
     image: mysql:8.0-debian
     ports:
       - "3306:3306"
-        #volumes:
-      # - ./mysql-data:/var/lib/mysql
-      # - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
     environment:
       - MYSQL_USER=devuser
       - MYSQL_PASSWORD=changeme
@@ -54,15 +54,15 @@ services:
       - logindb
   logindb:
     image: postgres:15.1-alpine
-    volumes:
-      - login-db-data:/var/lib/postgresql/data
+      # volumes:
+      #   - login-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=mainapp
       - POSTGRES_PASSWORD=changeme
 
 
-## volumes:
-##   mysql-data:
 volumes:
-  login-db-data:
+  mysql-data:
+## volumes:
+##   login-db-data:
