--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
 version: "3.3"
 
 services:
-  app:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-      - login
-    environment:
-      - DB_HOST=db
-      - DB_NAME=maindb
-      - DB_USER=devuser
-      - DB_PASS=changeme
-      - DB_PORT=3306
-      - LOGIN_HOST=login
-      - LOGIN_PORT=8000
-    volumes:
-      - ./build/libs/:/usr/local/tomcat/webapps/
+  # app:
+  #   build: .
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - db
+  #     - login
+  #   environment:
+  #     - DB_HOST=db
+  #     - DB_NAME=maindb
+  #     - DB_USER=devuser
+  #     - DB_PASS=changeme
+  #     - DB_PORT=3306
+  #     - LOGIN_HOST=login
+  #     - LOGIN_PORT=8000
+  #   volumes:
+  #     - ./build/libs/:/usr/local/tomcat/webapps/
 
   db:
     image: mysql:8.0-debian
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql-data:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
       - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
     environment:
       - MYSQL_USER=devuser
