Spring Security with Jwt prototype working
Have not tested, or implemented the controllers for, signup and signin.
Much testing to do yet, but the application builds just fine.

Spring Security blocks all endpoints by default as soon as is included
as dependency. So, I had to disable it by setting to allow to /** (all
paths) in the configuration file. This setting has to be removed when
the testing is over.

Tried disabling Spring Security from the application.properties file,
but it seems that once a new configuration is set up using the
@Configuration annotation, it no longer takes into accou the properties
file.

This line (application.properties) is needed as a development secret key:
    token.signing.key=c2VjdXJlamF2YXNwcmluZ2Jvb3RrZXk=

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,29 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
+
+		<!-- Sunday Sept 10, 2023 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<build>
