--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,20 @@ spring.datasource.username=devuser
 spring.datasource.password=changeme
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+## NOTE: Only until I have registered some users
+# security.ignored=/**
+# spring.security.enabled=false
+# management.security.enabled=false
+# security.basic.enabled=false
+
+# application.security.disabled=true
+
+token.signing.key=c2VjdXJlamF2YXNwcmluZ2Jvb3RrZXk=
+
+## NOTE: Only if not too verbose 
+# logging.level.org.springframework=DEBUG
+
+
+
 
 
