--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=devuser
 spring.datasource.password=changeme
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.data.rest.basePath=/api/v1
 ## NOTE: Only until I have registered some users
 # security.ignored=/**
 # spring.security.enabled=false
@@ -11,7 +12,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # application.security.disabled=true
 
-token.signing.key=c2VjdXJlamF2YXNwcmluZ2Jvb3RrZXk=
+token.signing.key=XCyd+fmdOFieo+t4oymeYV16SQGOU/gghjXvz+2hKzU=
 
 ## NOTE: Only if not too verbose 
 # logging.level.org.springframework=DEBUG
