--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
