--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "3.3"
 
 services:
+  api:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
 
   db:
     image: mysql:8.0-debian
@@ -17,5 +23,3 @@ services:
 
 volumes:
   mysql-data:
-## volumes:
-##   login-db-data:
