--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.password=changeme
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.data.rest.basePath=/api/v1
+# The following disables Hibernates feature to connect and update the database
+# schema. This is done so we can package the application without a live DB
+# running. 
+spring.jpa.hibernate.ddl-auto=none
+
 ## NOTE: Only until I have registered some users
 # security.ignored=/**
 # spring.security.enabled=false
